# allianz_feddit

./: README.md  compose.yml  requirements-dev.txt  requirements.txt
feddit-nlp-main/: .gitignore  Dockerfile  README.md  app.py  praw.ini.sample  pyproject.toml
feddit-nlp-main/templates/: results.html
scratches/: flask-app.py
