[tool.poetry]
name = "reddit-nlp"
version = "0.1.0"
description = "apis for interacting with comments on subreddits"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "reddit_nlp"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.1"

[tool.poetry.group.dev.dependencies]
ipython = "^8.15.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
